--- a/learning/views/author/add.ejs
+++ b/learning/views/author/add.ejs
@@ -1,6 +1,6 @@
 
 
-<form action="/author" method="POST" class="mt-5">
+<form action="/authors" method="POST" class="mt-5">
 <div class="form-group ">
 <label>Name</label>
 <input type="text" class="form-control" name="name" value="<%= %> ">
