--- a/learning/views/author/index.ejs
+++ b/learning/views/author/index.ejs
@@ -5,7 +5,7 @@
 
 <h2 class="text-center">Authors list</h2>
 
-<form action="/author" method="GET">
+<form action="/authors" method="GET">
 <input type="text" name="name" value="<%= %>">
 <button  type="submit">Search</button>
 </form>
@@ -20,4 +20,4 @@
 
 
 
-<button class="btn btn-parimary"><a href="/author/new">Add new Author</a></button>
+<button class="btn btn-parimary"><a href="/authors/new">Add new Author</a></button>
