--- a/learning/views/partials/header.ejs
+++ b/learning/views/partials/header.ejs
@@ -3,7 +3,8 @@
 <a class="navbar-brand" href="/"><h1>Learning App</h1></a>
 <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" href="/">Home</a> </li>
-    <li class="nav-item"><a class="nav-link" href="/author">Authors</a> </li>
+    <li class="nav-item"><a class="nav-link" href="/authors">Authors</a> </li>
+    <li class="nav-item"><a class="nav-link" href="/authors/new">Add new author</a> </li>
     
 </ul>
 
