added delete, show and edit routes

--- a/learning/views/author/index.ejs
+++ b/learning/views/author/index.ejs
@@ -12,12 +12,11 @@
 
 <% author.forEach(author => { %>
 <div class="col-sm-8 mb-3">
-    First name:  <%= author.name %> <br>Last name: <%= author.lastName %> <br>Add at<%=author.createdAt%> 
+    First name:  <%= author.name %> <br>Last name: <%= author.lastName %> <br>Add at<%=author.createdAt%> <a href="authors/<%=author.id %> ">Show</a>
+    <a href="authors/<%=author.id %>/edit ">Edit</a>
+    <form method="POST" action="authors/<%= author.id %>?_method=DELETE ">
+    <button type="submit">Delete</button>
+    </form>
 </div>
 
 <% }) %>
-
-
-
-
-<button class="btn btn-parimary"><a href="/authors/new">Add new Author</a></button>
