Added books backend

--- a/learning/views/partials/header.ejs
+++ b/learning/views/partials/header.ejs
@@ -5,7 +5,8 @@
     <li class="nav-item"><a class="nav-link" href="/">Home</a> </li>
     <li class="nav-item"><a class="nav-link" href="/authors">Authors</a> </li>
     <li class="nav-item"><a class="nav-link" href="/authors/new">Add new author</a> </li>
-    
+    <li class="nav-item"><a class="nav-link" href="/books">Books</a> </li>
+    <li class="nav-item"><a class="nav-link" href="/books/new">Add new book</a> </li>
 </ul>
 
 </nav>
