--- a/learning/views/books/new.ejs
+++ b/learning/views/books/new.ejs
@@ -1,11 +1,32 @@
 
-<form action="/books" method="POST">
+<h1>Add new book</h1>
+<form  action="/books" method="POST">
 
-    <title>Name of book</title>
-    <input type="text" name="name" value="<%=  %> ">
-    <title>Type</title>
-    <input type="text" name="type" value="<%=  %> ">
-    <button type="submit">Submit</button>
+    <div class="form-group">
+        <label>Author</label>
+        <select class="form-control" name="author">
+            <% author.forEach(author => { %>
+             
+                <option value="<%= author.id %>"><%= author.name%></option>
+            <% }) %>
+
+        </select>
+        
+    </div>
+
+    <div class="form-group">
+    <label>Name of book</label>
+    <input class="form-control" type="text" name="name" value="<%=  %> ">
+    </div>
+
+
+    <div class="form-group">
+    <label>Type</label>
+    <input class="form-control" type="text" name="type" value="<%=  %> ">
+    </div>
+
+
+    <button type="submit" class="btn btn-primary">Add</button>
     
 
 
