--- a/learning/views/index.ejs
+++ b/learning/views/index.ejs
@@ -1,1 +1,19 @@
-Home page
+<h1 class="text-center">Books and Authors list</h1>
+
+<% book.forEach(book => { %>
+   <% author.forEach(author => { %>
+
+    <% if (author.id == book.author) { %>
+     
+        <div class="col-sm-8 mb-3 text-center">
+                <h4>Title:  </h4>  <%=book.name %> <br>
+                <h4>Type:   </h4>  <%= book.type %> <br>
+                <h4>Author: </h4>  <%= author.name %>  
+            </div>
+
+    <% } %>
+   <% }) %>
+    
+<% }) %> 
+
+
