--- a/learning/views/author/new.ejs
+++ b/learning/views/author/new.ejs
@@ -3,12 +3,22 @@
 <form action="/authors" method="POST" class="mt-5">
 <div class="form-group ">
 <label>Name</label>
-<input type="text" class="form-control" name="name" value="<%= %> ">
+<input type="text" class="form-control" name="name" >
 </div>
 
 <div class="form-group">
 <label>Last name</label>
-<input type="text" class="form-control" name="lastname" value="<%= %> ">
+<input type="text" class="form-control" name="lastname" >
+</div>
+
+<div class="form-group">
+<label>Has books:</label>
+
+ 
+<input type="checkbox" class="form-control" name="hasBooks">
+    
+    
+
 </div>
 
 <button type="submit" class="btn btn-primary">Add</button>
